deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
  namespace: pacman-argo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
      - name: pacman
        image: ghcr.io/franciscofariactw/pacman:2.0
        resources:
          requests:
            cpu: "100m"  # Solicitação mínima de CPU.
          limits:
            cpu: "200m"  # Limite máximo de CPU.
